# Langchain-udemy-course

./: .gitignore
langchain-agents/: .env.example  1-react_tool_calling.py  2-raw_func_call.py  3-reactPrompt_func_call.py  main.py  pyproject.toml
langchain-course/: main.py
rag/: ingestion.py  main.py  mediumblog.txt  pyproject.toml
react-search-agent/: main.py  pyproject.toml
